# no-ppap-milter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
no_ppap_milter/: cli_no_ppap_milter.py  libemail.py  no_ppap_milter.py
